--- a/website/src/components/WhatIsIt/styles.module.css
+++ b/website/src/components/WhatIsIt/styles.module.css
@@ -1,4 +1,4 @@
-.button {
+.cta {
 	background: #0086bf44;
 	border: 1px solid #ace;
 	border-radius: .5rem;
